Position the language listbox to bottom to fix cutoff (#6972)
* position the language listbox to bottom

* Don't need width property

* Add min-width

---------

--- a/src/Aspire.Dashboard/wwwroot/css/app.css
+++ b/src/Aspire.Dashboard/wwwroot/css/app.css
@@ -734,3 +734,8 @@ fluent-switch.table-switch::part(label) {
 .clear-button::part(control) {
     padding: 0 calc((10 + (var(--design-unit) * 2 * var(--density))) * 1px);
 }
+
+.language-select {
+    margin-bottom: 2px;
+    min-width: 240px;
+}
